tests/baselines/reference/enumLiteralAssignableToEnumInsideUnion.errors.txt
tests/cases/compiler/enumLiteralAssignableToEnumInsideUnion.ts(25,7): error TS2322: Type 'Foo' is not assignable to type 'boolean | Foo.B'.
tests/cases/compiler/enumLiteralAssignableToEnumInsideUnion.ts(26,7): error TS2322: Type 'Foo' is not assignable to type 'boolean | Foo.A'.


==== tests/cases/compiler/enumLiteralAssignableToEnumInsideUnion.ts (2 errors) ====
    module X {
        export enum Foo {
            A, B
        }
    }
    module Y {
        export enum Foo {
            A, B
        }
    }
    module Z {
        export enum Foo {
            A = 1 << 1,
            B = 1 << 2,
        }
    }
    module Ka {
        export enum Foo {
            A = 1 << 10,
            B = 1 << 11,
        }
    }
    const e1: X.Foo | boolean = Z.Foo.A; // ok
    const e2: X.Foo.A | X.Foo.B | boolean = Z.Foo.A; // ok, X.Foo is equivalent to X.Foo.A | X.Foo.B
    const e3: X.Foo.B | boolean = Z.Foo.A; // not legal
          ~~
!!! error TS2322: Type 'Foo' is not assignable to type 'boolean | Foo.B'.
    const e4: X.Foo.A | boolean = Z.Foo.A; // not legal either because Z.Foo is computed and Z.Foo.A is not necessarily assignable to X.Foo.A
          ~~
!!! error TS2322: Type 'Foo' is not assignable to type 'boolean | Foo.A'.
    const e5: Ka.Foo | boolean = Z.Foo.A; // ok
    